--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,3 @@
-main {
-    height: 100vh;
-}
-
 * {
   font-family: Poiret One;
 }
@@ -11,9 +7,8 @@ body {
   border:0;
 }
 
-.image{
- position: relative;
- top:15px;
+main {
+  height: 100vh;
 }
 
 .jumbotronStyle {
@@ -21,11 +16,22 @@ body {
     height: 50vh;
     width: 100%;
   }
+
+  .image{
+    position: relative;
+    top:15px;
+   }
   
   .col-card  {
     margin: 3px;
     height: 40vh;
     width: 20% !important;
+  }
+
+  .five-day {
+font-size: 24px;
+margin:0;
+padding:0;
   }
 
   .flexbox {
