--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,3 +52,30 @@ padding:0;
     margin-bottom: 2%;
   }
   
+  .green {
+    background-color:green;
+    padding: 2px 5px;
+    border-radius: 2px;
+  }
+  .yello {
+    background-color: yellow;
+    padding: 2px 5px;
+    border-radius: 2px;
+  }
+  .orange {
+    background-color: orange;
+    padding: 2px 5px;
+    border-radius: 2px;
+  }
+
+  .red {
+    background-color: red;
+    padding: 2px 5px;
+    border-radius: 2px;
+  }
+
+  .purple {
+    background-color: purple;
+    padding: 2px 5px;
+    border-radius: 2px;
+  }
